--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "formik": "^2.2.9",
     "next": "13.1.1",
     "next-auth": "4",
+    "next-superjson-plugin": "^0.5.2",
     "prisma": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "superjson": "^1.12.1",
     "typescript": "4.9.4",
     "yup": "^0.32.11"
   },
